Fix linters for html and css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Working projects -->
 
     <section class="d-flex flex-column align-items-center gap-5 m-t">
-      <div class="card mb-3" style="max-width: 80%;">
+      <div class="card mb-3">
         <div class="row g-0 p-2">
           <div class="col-md-4 d-flex justify-content-center">
             <img src="./images/snapshot-1.svg" class="img-fluid rounded-start h-100" alt="...">
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 80%;">
+      <div class="card mb-3">
         <div class="d-flex flex-row-reverse row g-0 p-2">
           <div class="col-md-4 d-flex justify-content-center">
             <img src="./images/snapshot-2.svg" class="img-fluid rounded-start h-100" alt="...">
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 80%;">
+      <div class="card mb-3">
         <div class="row g-0 p-2">
           <div class="col-md-4 d-flex justify-content-center">
             <img src="./images/snapshot-3.svg" class="img-fluid rounded-start h-100" alt="...">
@@ -126,7 +126,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 80%;">
+      <div class="card mb-3">
         <div class="d-flex flex-row-reverse row g-0 p-2">
           <div class="col-md-4 d-flex justify-content-center">
             <img src="./images/snapshot-4.svg" class="img-fluid rounded-start h-100" alt="...">
